[gd_scene load_steps=7 format=1]

[ext_resource path="res://MiniGames/Two/two.gd" type="Script" id=1]
[ext_resource path="res://MiniGames/Two/gfx/Mouth.png" type="Texture" id=2]
[ext_resource path="res://MiniGames/Two/gfx/cavity1.png" type="Texture" id=3]
[ext_resource path="res://MiniGames/Two/gfx/cavity2.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://RawAssets/Fonts/Aero.ttf"

[sub_resource type="DynamicFont" id=2]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = SubResource( 1 )

[node name="Base" type="Node2D"]

script/script = ExtResource( 1 )
time_limit = 5
max_size = 0.75
next_scene = "res://MiniGames/Three/Intro.tscn"

[node name="BG" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 640.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Cavities" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="Cavity" type="TextureButton" parent="Cavities"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 336.0
margin/top = 270.0
margin/right = 361.0
margin/bottom = 299.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.25, 0.25 )
params/stretch_mode = 0

[node name="Tween" type="Tween" parent="Cavities/Cavity"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Cavity1" type="TextureButton" parent="Cavities"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 403.0
margin/right = 378.0
margin/bottom = 432.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.25, 0.25 )
params/stretch_mode = 0

[node name="Tween" type="Tween" parent="Cavities/Cavity1"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Cavity2" type="TextureButton" parent="Cavities"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 365.0
margin/right = 205.0
margin/bottom = 394.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.25, 0.25 )
params/stretch_mode = 0

[node name="Tween" type="Tween" parent="Cavities/Cavity2"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Cavity3" type="TextureButton" parent="Cavities"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 505.0
margin/top = 287.0
margin/right = 530.0
margin/bottom = 316.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.25, 0.25 )
params/stretch_mode = 0

[node name="Tween" type="Tween" parent="Cavities/Cavity3"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Cavity4" type="TextureButton" parent="Cavities"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 265.0
margin/right = 192.0
margin/bottom = 294.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/disabled = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.25, 0.25 )
params/stretch_mode = 0

[node name="Tween" type="Tween" parent="Cavities/Cavity4"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -6.0
margin/top = -4.0
margin/right = 647.0
margin/bottom = 66.0

[node name="Time" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 514.0
margin/top = 27.0
margin/right = 620.0
margin/bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "5 Secs"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Tween" type="Tween" parent="Time"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="VictoryPanel" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 256.0
margin/right = 508.0
margin/bottom = 439.0

[node name="Label" type="Label" parent="VictoryPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 74.0
margin/right = 264.0
margin/bottom = 88.0
text = "Look at those pearly whites!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DefeatPanel" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 256.0
margin/right = 508.0
margin/bottom = 439.0

[node name="Label" type="Label" parent="DefeatPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 74.0
margin/right = 264.0
margin/bottom = 88.0
text = "Gross, This will never do!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Cavities/Cavity" to="." method="_on_Cavity_pressed"]

[connection signal="pressed" from="Cavities/Cavity1" to="." method="_on_Cavity1_pressed"]

[connection signal="pressed" from="Cavities/Cavity2" to="." method="_on_Cavity2_pressed"]

[connection signal="pressed" from="Cavities/Cavity3" to="." method="_on_Cavity3_pressed"]

[connection signal="pressed" from="Cavities/Cavity4" to="." method="_on_Cavity4_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


